[gd_scene load_steps=21 format=2]

[ext_resource path="res://gfx/bear_animation.png" type="Texture" id=1]
[ext_resource path="res://bear.gd" type="Script" id=2]
[ext_resource path="res://hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://gfx/mosquito_blood.png" type="Texture" id=5]
[ext_resource path="res://audio/nope.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/enemy_hit3.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), null ],
"loop": false,
"name": "splash",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 1.89085
height = 4.65488

[sub_resource type="CapsuleShape2D" id=11]
radius = 4.18897
height = 3.94774

[sub_resource type="CapsuleShape2D" id=12]
radius = 8.4316
height = 8.54396

[sub_resource type="CapsuleShape2D" id=13]
radius = 9.66895
height = 56.9809

[node name="bear" type="KinematicBody2D"]
collision_layer = 2147483664
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "walk"
playing = true

[node name="AnimatedBlood" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 9 )
animation = "splash"
speed_scale = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.59099, 2.82843 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="hitbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( -0.707108, 0.707104 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 1.23744, 0.353562 )
rotation = 1.5708
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0.176783, 1.59099 )
shape = SubResource( 12 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 13 )

[node name="AudioNope" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AudioHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -3.684

[node name="TimerAttack" type="Timer" parent="."]
wait_time = 2.0

[node name="TimerDestination" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
[connection signal="timeout" from="TimerDestination" to="." method="_on_TimerDestination_timeout"]

[editable path="hitbox"]

[editable path="hurtbox"]
